<resources>
    <string name="app_name">Profile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="your_profile">Your Profile</string>

    <string name="club">Club</string>
    <string name="diamond">Diamond</string>
    <string name="spade">Spade</string>
    <string name="heart">Heart</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="slideshow">Slideshow</string>
    <string name="settings">Settings</string>
    <string name="send">Send</string>
    <string name="send_or_share_your_files_with_others">Send or share your files with others.</string>
    <string name="change_your_account_settings">Change your account settings.</string>
    <string name="show_a_slide_show_of_all_your_images">Show a slide show of all your images.</string>
    <string name="shows_all_your_saved_photos">Shows all your saved photos.</string>
    <string name="opens_up_the_camera_to_click_photos">Opens up the camera to click photos.</string>
    <string name="profile_picture">Profile Picture</string>
</resources>
